istio-teaching/visilazation/sc-productpage.yaml
apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: productpage
spec:
  workloadSelector:
    labels:
      app: productpage
  egress:
  - hosts:
    - "efk/*"
    port:
      number: 9200
      protocol: HTTP
      name: egresshttp
    captureMode: NONE
